--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-relative-links
 relative_links:
@@ -6,3 +6,4 @@ relative_links:
   collections: true
 include:
   - index.md
+  - file.md
