--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,8 @@ relative_links:
 include:
   - index.md
   - file.md
+
+author: Preston Dresser
+email: preston.dresser16@gmail.com
+github_username:  03predo
+linkedin_username: preston-dresser
