add vid streaming page

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,19 @@
 title: Preston Dresser
 theme: minima
+
+base_url: /03predo.github.io
+repository: 03predo/03predo.github.io
+
 plugins:
   - jekyll-relative-links
   - jekyll-seo-tag
+
 relative_links:
   enabled: true
   collections: true
+
 include:
-  - index.md
-  - file.md
+  - pages
 
 author: Preston Dresser
 email: preston.dresser16@gmail.com
