add digisynth page

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,4 @@ author: Preston Dresser
 email: preston.dresser16@gmail.com
 github_username:  03predo
 linkedin_username: preston-dresser
+youtube_username: prestondresser
