add eeprom to lcd page

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,13 @@ relative_links:
   enabled: true
   collections: true
 
+header_pages:
+  - pages/predos.md
+  - pages/video_streaming.md
+  - pages/digital_synth.md
+  - pages/node_network.md
+  - pages/eeprom_to_lcd.md
+
 include:
   - pages
 
